--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,14 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
+    <script>
+      let isAlive=setInterval(function(){
+        let dinoTop=parseInt(window.getComputedStyle(dino).getPropertyValue("top"));
+        let cactusLeft=parseInt(window.getComputedStyle(cactus).getPropertyValue("left"));
+        if (cactusLeft<270 && cactusLeft>240 && dinoTop>=300) {
+          alert("Game Over")
+        }
+      },20);
+    </script>
   </body>
 </html>
