--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         let dinoTop=parseInt(window.getComputedStyle(dino).getPropertyValue("top"));
         let cactusLeft=parseInt(window.getComputedStyle(cactus).getPropertyValue("left"));
         if (cactusLeft<270 && cactusLeft>240 && dinoTop>=300) {
-          alert("Game Over")
+          alert("Game Over");
         }
       },20);
     </script>
